native/include/alexandria_ffi.h

/**
 * Result of `alexandria_file_edit_metadata` (UC-04). On success `status` is
 * `FILE_OK` and `json` is a NUL-terminated JSON string of the `FileMetadata`
 * body — byte-for-byte the same shape HTTP returns from
 * `PATCH /v1/files/{uuid}/metadata` (FR-FC-24 / NFR-09). On failure `json`
 * is NULL and `status` carries the mapped error code. The caller must free
 * `json` with `alexandria_free_string`.
 */
typedef struct FileMetadataResult {
  int status;
  char *json;
} FileMetadataResult;
/**
 * Result of `alexandria_files_list` and `alexandria_file_get_by_uuid` (UC-03).
 * On success `status` is `FILE_OK` and `json` is a NUL-terminated JSON string
 * — byte-for-byte the same shape HTTP returns from `GET /v1/files` (a JSON
 * array of `File` records) or `GET /v1/files/{uuid}` (a `FileView` object),
 * so the FFI and HTTP surfaces agree modulo key ordering (parity, FR-FC-24 /
 * NFR-09). On failure `json` is NULL and `status` carries the mapped error
 * code. The caller must free `json` with `alexandria_free_string`.
 */
typedef struct FileJsonResult {
  int status;
  char *json;
} FileJsonResult;
/**
 * JSON result for the playback functions. `json` is NULL on error and
 * `status` carries the mapped code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct PlaybackJsonResult {
  int status;
  char *json;
} PlaybackJsonResult;
/**
 * Result of `alexandria_collection_create` (UC-10). On success `status` is
 * `COLLECTION_OK` and `json` is a NUL-terminated JSON string of the
 * `Collection` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/collections` (FR-FC-24 / NFR-09). On failure `json` is NULL and
 * `status` carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct CollectionJsonResult {
  int status;
  char *json;
} CollectionJsonResult;
/**
 * Edit a file's type-specific metadata (UC-04 / FR-FC-14..18).
 *
 * `uuid` is the file's public UUID string; `json_patch` is the JSON body
 * (the `SubtypeMetadata` enum, internally tagged by `type`) that HTTP would
 * send. The function deserializes it, calls the same `EditMetadataHandler`
 * the HTTP route uses, and on success serializes the returned `FileMetadata`
 * back to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
 * ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct FileMetadataResult alexandria_file_edit_metadata(const char *uuid,
                                                        const char *json_patch,
                                                        const char *token);
/**
 * Get a single file's metadata by its public UUID (UC-03 / FR-FC-13).
 *
 * `uuid` is the file's public UUID string. The function calls the same
 * `BrowseFilesHandler::get_by_uuid` the HTTP route uses, and on success
 * serializes the returned `FileView` back to JSON — the same shape HTTP
 * returns from `GET /v1/files/{uuid}` (parity, FR-FC-24 / NFR-09). `token`
 * is the bearer auth token.
 */
struct FileJsonResult alexandria_file_get_by_uuid(const char *uuid, const char *token);
/**
 * One page of a CBZ ComicBook (UC-39 / FR-MP-04).
 *
 * Returns `{"uuid":…,"page":N,"pageCount":N,"mimeType":…,"bytesBase64":…}`.
 * Unlike UC-38, the bytes *do* cross the boundary: a comic page has no path
 * of its own — it lives inside an archive — and it is bounded, so
 * base64 inside the existing JSON payload keeps the FFI shape intact while
 * staying byte-exact with HTTP.
 */
struct PlaybackJsonResult alexandria_comic_page(const char *uuid, uint32_t page, const char *token);
/**
 * Write edited content back to a TextFile on disk (UC-33 / FR-TX-02,
 * FR-TX-03).
 *
 * `uuid` is the file's public UUID (NUL-terminated string). `json_body` is
 * the JSON body HTTP would send (`content`). The function deserializes it,
 * calls the same `EditTextFileContentHandler` the HTTP route uses, and on
 * success serializes the returned `File` back to JSON — so the FFI and
 * HTTP surfaces agree byte-for-byte modulo key ordering (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct FileJsonResult alexandria_file_edit_content(const char *uuid,
                                                   const char *json_body,
                                                   const char *token);
/**
 * Create a flat file or bookmark collection (UC-10 / FR-CO-01, FR-CO-02).
 *
 * `json_body` is the JSON body HTTP would send (`name` + `kind`). The
 * function deserializes it, calls the same `CreateCollectionHandler` the HTTP
 * route uses, and on success serializes the returned `Collection` back to
 * JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_create(const char *json_body, const char *token);
/**
 * Rename a collection (UC-11 / FR-CO-03).
 *
 * `uuid` is the collection's public UUID (NUL-terminated string). `json_body`
 * is the JSON body HTTP would send (`{"name": …}`). The function
 * deserializes it, calls the same `RenameCollectionHandler` the HTTP route
 * uses, and on success serializes the returned `Collection` back to JSON —
 * so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_rename(const char *uuid,
                                                         const char *json_body,
                                                         const char *token);
/**
 * Delete a collection, unlinking its items (UC-12 / FR-CO-04).
 *
 * `uuid` is the collection's public UUID (NUL-terminated string). On success
 * `json` carries the pre-delete `Collection` as confirmation — byte-for-byte
 * the same shape HTTP returns from `DELETE /v1/collections/{uuid}` (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_delete(const char *uuid, const char *token);
/**
 * Add items to a collection (UC-13 / FR-CO-05).
 *
 * `uuid` is the collection's public UUID (NUL-terminated string). `json_body`
 * is the JSON body HTTP would send (`itemUuids`). The function deserializes
 * it, calls the same `AddItemsToCollectionHandler` the HTTP route uses, and
 * on success serializes the returned `CollectionItemsResult` back to JSON —
 * so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_add_items(const char *uuid,
                                                            const char *json_body,
                                                            const char *token);
/**
 * Remove an item from a collection (UC-14 / FR-CO-06).
 *
 * `collection_uuid` and `item_uuid` are the collection's and item's public
 * UUIDs (NUL-terminated strings). On success `json` carries the
 * `collectionUuid`/`itemUuid` confirmation — byte-for-byte the same shape
 * HTTP returns from `DELETE /v1/collections/{uuid}/items/{itemUuid}`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_remove_item(const char *collection_uuid,
                                                              const char *item_uuid,
                                                              const char *token);
/**
 * List the items in a collection (UC-14 / FR-CO-07).
 *
 * `uuid` is the collection's public UUID (NUL-terminated string). On
 * success `json` carries the `kind` and current members — byte-for-byte
 * the same shape HTTP returns from `GET /v1/collections/{uuid}/items`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_list_items(const char *uuid, const char *token);