lib/core/bindings/alexandria_bindings.dart


  late final _alexandria_collection_add_itemsPtr =
      _lookup<
        ffi.NativeFunction<
          CollectionJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_collection_add_items');
  late final _alexandria_collection_add_items =
      _alexandria_collection_add_itemsPtr
          .asFunction<
            CollectionJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Create a flat file or bookmark collection (UC-10 / FR-CO-01, FR-CO-02).
  ///
  /// `json_body` is the JSON body HTTP would send (`name` + `kind`). The
  /// function deserializes it, calls the same `CreateCollectionHandler` the HTTP
  /// route uses, and on success serializes the returned `Collection` back to
  /// JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  CollectionJsonResult alexandria_collection_create(
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_collection_create(json_body, token);
  }

  late final _alexandria_collection_createPtr =
      _lookup<
        ffi.NativeFunction<
          CollectionJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_collection_create');
  late final _alexandria_collection_create = _alexandria_collection_createPtr
      .asFunction<
        CollectionJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Delete a collection, unlinking its items (UC-12 / FR-CO-04).
  ///
  /// `uuid` is the collection's public UUID (NUL-terminated string). On success
  /// `json` carries the pre-delete `Collection` as confirmation — byte-for-byte
  /// the same shape HTTP returns from `DELETE /v1/collections/{uuid}` (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  CollectionJsonResult alexandria_collection_delete(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_collection_delete(uuid, token);
  }

  late final _alexandria_collection_deletePtr =
      _lookup<
        ffi.NativeFunction<
          CollectionJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_collection_delete');
  late final _alexandria_collection_delete = _alexandria_collection_deletePtr
      .asFunction<
        CollectionJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// List the items in a collection (UC-14 / FR-CO-07).
  ///
  /// `uuid` is the collection's public UUID (NUL-terminated string). On
  /// success `json` carries the `kind` and current members — byte-for-byte
  /// the same shape HTTP returns from `GET /v1/collections/{uuid}/items`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  CollectionJsonResult alexandria_collection_list_items(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_collection_list_items(uuid, token);
  }

  late final _alexandria_collection_list_itemsPtr =
      _lookup<
        ffi.NativeFunction<
          CollectionJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_collection_list_items');
  late final _alexandria_collection_list_items =
      _alexandria_collection_list_itemsPtr
          .asFunction<
            CollectionJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Remove an item from a collection (UC-14 / FR-CO-06).
  ///
  /// `collection_uuid` and `item_uuid` are the collection's and item's public
  /// UUIDs (NUL-terminated strings). On success `json` carries the
  /// `collectionUuid`/`itemUuid` confirmation — byte-for-byte the same shape
  /// HTTP returns from `DELETE /v1/collections/{uuid}/items/{itemUuid}`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  CollectionJsonResult alexandria_collection_remove_item(
    ffi.Pointer<ffi.Char> collection_uuid,
    ffi.Pointer<ffi.Char> item_uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_collection_remove_item(
      collection_uuid,
      item_uuid,
      token,
    );
  }

  late final _alexandria_collection_remove_itemPtr =
      _lookup<
        ffi.NativeFunction<
          CollectionJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_collection_remove_item');
  late final _alexandria_collection_remove_item =
      _alexandria_collection_remove_itemPtr
          .asFunction<
            CollectionJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Rename a collection (UC-11 / FR-CO-03).
  ///
  /// `uuid` is the collection's public UUID (NUL-terminated string). `json_body`
  /// is the JSON body HTTP would send (`{"name": …}`). The function
  /// deserializes it, calls the same `RenameCollectionHandler` the HTTP route
  /// uses, and on success serializes the returned `Collection` back to JSON —
  /// so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  CollectionJsonResult alexandria_collection_rename(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_collection_rename(uuid, json_body, token);
  }

  late final _alexandria_collection_renamePtr =
      _lookup<
        ffi.NativeFunction<
          CollectionJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_collection_rename');
  late final _alexandria_collection_rename = _alexandria_collection_renamePtr
      .asFunction<
        CollectionJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// One page of a CBZ ComicBook (UC-39 / FR-MP-04).
  ///
  /// Returns `{"uuid":…,"page":N,"pageCount":N,"mimeType":…,"bytesBase64":…}`.
  /// Unlike UC-38, the bytes *do* cross the boundary: a comic page has no path
  /// of its own — it lives inside an archive — and it is bounded, so
  /// base64 inside the existing JSON payload keeps the FFI shape intact while
  /// staying byte-exact with HTTP.
  PlaybackJsonResult alexandria_comic_page(
    ffi.Pointer<ffi.Char> uuid,
    int page,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_comic_page(uuid, page, token);
  }

  late final _alexandria_comic_pagePtr =
      _lookup<
        ffi.NativeFunction<
          PlaybackJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_comic_page');
  late final _alexandria_comic_page = _alexandria_comic_pagePtr
      .asFunction<
        PlaybackJsonResult Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Write edited content back to a TextFile on disk (UC-33 / FR-TX-02,
  /// FR-TX-03).
  ///
  /// `uuid` is the file's public UUID (NUL-terminated string). `json_body` is
  /// the JSON body HTTP would send (`content`). The function deserializes it,
  /// calls the same `EditTextFileContentHandler` the HTTP route uses, and on
  /// success serializes the returned `File` back to JSON — so the FFI and
  /// HTTP surfaces agree byte-for-byte modulo key ordering (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  FileJsonResult alexandria_file_edit_content(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_edit_content(uuid, json_body, token);
  }

  late final _alexandria_file_edit_contentPtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_file_edit_content');
  late final _alexandria_file_edit_content = _alexandria_file_edit_contentPtr
      .asFunction<
        FileJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Edit a file's type-specific metadata (UC-04 / FR-FC-14..18).
  ///
  /// `uuid` is the file's public UUID string; `json_patch` is the JSON body
  /// (the `SubtypeMetadata` enum, internally tagged by `type`) that HTTP would
  /// send. The function deserializes it, calls the same `EditMetadataHandler`
  /// the HTTP route uses, and on success serializes the returned `FileMetadata`
  /// back to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
  /// ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  FileMetadataResult alexandria_file_edit_metadata(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_patch,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_edit_metadata(uuid, json_patch, token);
  }

  late final _alexandria_file_edit_metadataPtr =
      _lookup<
        ffi.NativeFunction<
          FileMetadataResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_file_edit_metadata');
  late final _alexandria_file_edit_metadata = _alexandria_file_edit_metadataPtr
      .asFunction<
        FileMetadataResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Get a single file's metadata by its public UUID (UC-03 / FR-FC-13).
  ///
  /// `uuid` is the file's public UUID string. The function calls the same
  /// `BrowseFilesHandler::get_by_uuid` the HTTP route uses, and on success
  /// serializes the returned `FileView` back to JSON — the same shape HTTP
  /// returns from `GET /v1/files/{uuid}` (parity, FR-FC-24 / NFR-09). `token`
  /// is the bearer auth token.
  FileJsonResult alexandria_file_get_by_uuid(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_get_by_uuid(uuid, token);
  }

  late final _alexandria_file_get_by_uuidPtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_file_get_by_uuid');
  late final _alexandria_file_get_by_uuid = _alexandria_file_get_by_uuidPtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();
